# DLLMForge

./: .buildinfo  .pre-commit-config.yaml  README.md  app.py  build_deltares_indexes.py  deltares_rag_demo.py  dllmforge.html  genindex.html  index.html  modules.html  objects.inv  pizza_course_tutorial_level2.py  pizza_course_tutorial_ultra_simple.py  py-modindex.html  requirements.txt  requirements_dev.txt  run_deltares_llm_tests.py  search.html  searchindex.js  setup.cfg  streamlit_water_management_app.py  test_deltares_ragas.py  tox.ini  tutorial_advanced_agent.py
.doctrees/: dllmforge.doctree  environment.pickle  index.doctree  modules.doctree
.doctrees/_autosummary/: dllmforge.IE_agent_config.doctree  dllmforge.IE_agent_document_processor.doctree  dllmforge.IE_agent_extractor.doctree  dllmforge.IE_agent_extractor_docling.doctree  dllmforge.IE_agent_schema_generator.doctree  dllmforge.agent_core.doctree  dllmforge.anthropic_api.doctree  dllmforge.doctree  dllmforge.langchain_api.doctree  dllmforge.llamaindex_api.doctree  dllmforge.openai_api.doctree  dllmforge.rag_embedding.doctree  dllmforge.rag_embedding_open_source.doctree  dllmforge.rag_evaluation.doctree  dllmforge.rag_preprocess_documents.doctree  dllmforge.rag_search_and_response.doctree
.doctrees/background/: LLM_explained.doctree  RAGS_explained.doctree
.doctrees/tutorials/: Information_extraction_tutorial.doctree  LLM_tutorial.doctree  RAG_tutorial.doctree  tutorial_advanced_agent.doctree  tutorial_simple_agent.doctree
.github/workflows/: docs.yml  main.yml
_autosummary/: dllmforge.IE_agent_config.html  dllmforge.IE_agent_document_processor.html  dllmforge.IE_agent_extractor.html  dllmforge.IE_agent_extractor_docling.html  dllmforge.IE_agent_schema_generator.html  dllmforge.agent_core.html  dllmforge.anthropic_api.html  dllmforge.html  dllmforge.langchain_api.html  dllmforge.llamaindex_api.html  dllmforge.openai_api.html  dllmforge.rag_embedding.html  dllmforge.rag_embedding_open_source.html  dllmforge.rag_evaluation.html  dllmforge.rag_preprocess_documents.html  dllmforge.rag_search_and_response.html
_modules/: index.html
_modules/dllmforge/: IE_agent_config.html  IE_agent_document_processor.html  IE_agent_extractor.html  IE_agent_extractor_docling.html  IE_agent_schema_generator.html  agent_core.html  anthropic_api.html  langchain_api.html  llamaindex_api.html  openai_api.html  rag_embedding.html  rag_embedding_open_source.html  rag_evaluation.html  rag_preprocess_documents.html  rag_search_and_response.html
_sources/: dllmforge.rst.txt  modules.rst.txt
_sources/_autosummary/: dllmforge.IE_agent_config.rst.txt  dllmforge.IE_agent_document_processor.rst.txt  dllmforge.IE_agent_extractor.rst.txt  dllmforge.IE_agent_extractor_docling.rst.txt  dllmforge.IE_agent_schema_generator.rst.txt  dllmforge.agent_core.rst.txt  dllmforge.anthropic_api.rst.txt  dllmforge.langchain_api.rst.txt  dllmforge.llamaindex_api.rst.txt  dllmforge.openai_api.rst.txt  dllmforge.rag_embedding.rst.txt  dllmforge.rag_embedding_open_source.rst.txt  dllmforge.rst.txt  (+3 more)
background/: LLM_explained.html  RAGS_explained.html
dllmforge/: IE_agent_config.py  IE_agent_document_processor.py  IE_agent_extractor.py  IE_agent_extractor_docling.py  IE_agent_schema_generator.py  __init__.py  agent_core.py  agent_orchestrator.py  anthropic_api.py  langchain_api.py  llamaindex_api.py  ollama_api.py  openai_api.py  rag_embedding.py  rag_embedding_open_source.py  rag_evaluation.py  rag_preprocess_documents.py  rag_preprocess_documents_docling.py  rag_search_and_response.py
docs/: conf.py  index.rst
streamlit_apps/: RAG_app.py  streamlit_water_management_app.py
tests/: test_anthropic_api.py  test_chat_completion_local.py  test_deltares_llms.py  test_deltares_llms_integration.py  test_dllmforge.py  test_ie_agent_docling_extractor.py  test_ie_agent_extractor.py  test_ie_agent_schema_generator.py  test_ie_document_processor.py  test_langchain_api.py  test_langchain_capabilities.py  test_llamaindex_api.py  test_llamaindex_capabilities.py  test_llm_capabilities.py  test_multiple_models.py  test_ollama_api.py  test_openai_api.py  test_optional_dependencies.py  test_rag_embedding.py  test_rag_evaluation.py  test_rag_preprocess_documents.py  test_rag_preprocess_documents_docling.py  test_rag_search_and_response.py
tutorials/: Information_extraction_tutorial.html  LLM_tutorial.html  RAG_tutorial.html  tutorial_advanced_agent.html  tutorial_simple_agent.html
workflows/: LLM_tutorial.ipynb  RAG_tutorial.ipynb  benchmarking_RAG.py  information_extration.ipynb  open_source_RAG.py  open_source_RAG_docling.py  pizza_course_tutorial_level2.py  pizza_course_tutorial_ultra_simple.py  tutorial_advanced_agent.ipynb  tutorial_advanced_agent.py  tutorial_simple_agent.ipynb
(+14 files in other folders)
