[metadata]
name = dllmforge
version = 0.1.0
url = https://github.com/Deltares-research/DLLMForge
author = LLM Team
description = A repository for LLM tools in Deltares
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
[options]
packages = 
    dllmforge
    dllmforge.LLMs
include_package_data = True
install_requires =
    matplotlib>=3.9.4
    langchain-community>=0.3.27
    transformers>=4.53.2
    sentence-transformers>=5.0.0
    langchain-huggingface>=0.3.0
    faiss-cpu>=1.8.0
    langchain-openai>=0.3.33
    langgraph>=0.6.7
    pypdf>=6.1.0
    anthropic>=0.68.0
    langchain_docling>=1.1.0
    azure-search-documents>=11.6.0
python_requires = >=3.10

[options.packages.find]
where = .
include = dllmforge*

[options.extras_require]
testing =
    pytest==7.4.2
    pytest-cov>=6.0
    tox>=4.23
    mypy>=1.13
    pre-commit==3.6.2
    yapf==0.43.0
    flake8==7.0.0
