[metadata]
name = dllmforge
version = 0.1.0
url = https://github.com/Deltares-research/DLLMForge
author = LLM Team
description = A repository for LLM tools in Deltares
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
[options]
packages = 
    dllmforge
    dllmforge.LLMs
    dllmforge.utils
include_package_data = True
install_requires =
    matplotlib>=3.9.4
    langchain-community>=0.3.27
    transformers>=4.53.2
    sentence-transformers>=5.0.0
    langchain-huggingface>=0.3.0
    faiss-cpu>=1.8.0
    langchain-openai>=0.3.33
    langgraph>=0.6.7
    pypdf>=6.1.0
    anthropic>=0.68.0
    langchain_docling>=1.1.0
    azure-search-documents>=11.6.0
    openai>=1.98.0
    langchain>=0.3.26
    llama-index>=0.13.0
    langchain-mistralai>=0.2.11
    llama-index-llms-azure-openai>=0.4.0
    llama-index-llms-mistralai>=0.7.0
    streamlit>=1.48.1
    python-dotenv>=1.1.1
    fastapi>=0.104.1
    uvicorn[standard]>=0.24.0
    jinja2>=3.1.2
    python-multipart>=0.0.6
    PyPDF2>=3.0.1
    PyMuPDF>=1.26.4
    pdf2image>=1.17.0
    pytesseract>=0.3.13
python_requires = >=3.10

[options.packages.find]
where = .
include = dllmforge*

[options.extras_require]
testing =
    pytest==7.4.2
    pytest-cov>=6.0
    tox>=4.23
    mypy>=1.13
    pre-commit==3.6.2
    yapf==0.43.0
    flake8==7.0.0
