[metadata]
name = dllmforge
version = 0.1.0
url = https://github.com/Deltares-research/DLLMForge
author = LLM Team
description = A repository for LLM tools in Deltares
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
[options]
packages = 
    dllmforge
    dllmforge.LLMs
    dllmforge.utils
include_package_data = True
install_requires =
    langchain>=0.3.26,<1.0
    langchain-core>=0.3.0,<1.0
    langchain-community>=0.3.27,<1.0
    langchain-text-splitters>=0.3.0,<1.0
    langgraph>=0.6.7,<1.0
    llama-index>=0.13.0
    python-dotenv>=1.1.1
    jinja2>=3.1.2
    matplotlib>=3.9.4
    pypdf>=6.1.0
    PyPDF2>=3.0.1
    PyMuPDF>=1.26.4
    pdf2image>=1.17.0
    pytesseract>=0.3.13
    pillow>=10.0.0
python_requires = >=3.10

[options.packages.find]
where = .
include = dllmforge*

[options.extras_require]
local =
    transformers>=4.53.2
    sentence-transformers>=5.0.0
    langchain-huggingface>=0.3.0
    faiss-cpu>=1.8.0
    # Advanced document processing
    langchain_docling>=1.1.0 
    docling>=2.45.0
    torch
api =
    # OpenAI/Azure
    openai>=1.98.0
    langchain-openai>=0.3.33
    llama-index-llms-azure-openai>=0.4.0
    # Anthropic
    anthropic>=0.68.0
    # Mistral
    langchain-mistralai>=0.2.11
    llama-index-llms-mistralai>=0.7.0
    # Azure Search
    azure-search-documents>=11.6.0
dev =
    pytest>=7.4.2
    pytest-cov>=6.0
    tox>=4.23
    mypy>=1.13
    pre-commit>=3.6.2
    yapf==0.43.0
    flake8==7.0.0
    sphinx>=8.1.3
    semchunk>=2.2.2
    tree-sitter>=0.25.2
    tree-sitter-c>=0.24.1
    tree-sitter-java>=0.23.5
    tree-sitter-javascript>=0.25.0
    tree-sitter-python>=0.25.0
    tree-sitter-typescript>=0.23.2
    multiprocess>=0.70.18
    sphinxcontrib.bibtex
    types-requests  
web =
    fastapi>=0.104.1
    uvicorn[standard]>=0.24.0
    streamlit>=1.48.1
    python-multipart>=0.0.6
    httptools>=0.7.1
    watchfiles>=1.1.1
    websockets>=15.0.1
all =
    %(local)s
    %(api)s
    %(dev)s
    %(web)s
